--- a/cmsis_lib/CMakeLists.txt
+++ b/cmsis_lib/CMakeLists.txt
@@ -4,4 +4,4 @@ project(cached_dilated_convolutions)
 
 add_executable(cdcc cdcc_main.cpp)
 
-include_directories(./libDaisy/Drivers/CMSIS/DSP/Include/)
+include_directories(../libDaisy/Drivers/CMSIS/DSP/Include/)
