read b_values from hex file

--- a/sverilog_version/tests/dot_product/Makefile
+++ b/sverilog_version/tests/dot_product/Makefile
@@ -1,6 +1,9 @@
 SIM ?= icarus
 TOPLEVEL_LANG ?= verilog
 VERILOG_SOURCES = ../../src/dot_product.sv
+TOPLEVEL = dot_product
 MODULE = dot_product_tb
+
+COMPILE_ARGS += -Pdot_product.B_VALUES=test_b_values.hex
 
 include $(shell cocotb-config --makefiles)/Makefile.sim
