--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ libDaisy
 prototyping_notebooks/trained_models/
 prototyping_notebooks/weights/
 prototyping_notebooks/util.py
+sverilog_version/tests/network/test_x.hex
