* 3 layer network * newly captured data * use interp data ( but only along boundary ) * change e0, e1 from range(0, 1) to (-1, 1) * up receptive field to x10 * plot validation data samples each epoch

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ prototyping_notebooks/weights/
 prototyping_notebooks/util.py
 sverilog_version/tests/network/test_x.hex
 keras_weights/
+qkeras_weights
+keras_weights/
