remove default for module params and move into testbench makefiles

--- a/sverilog_version/tests/activation_cache/Makefile
+++ b/sverilog_version/tests/activation_cache/Makefile
@@ -4,4 +4,6 @@ VERILOG_SOURCES = ../../src/activation_cache.sv
 TOPLEVEL = activation_cache
 MODULE = activation_cache_tb
 
+COMPILE_ARGS += -Pactivation_cache.D=2
+
 include $(shell cocotb-config --makefiles)/Makefile.sim
