--- a/sverilog_version/tests/conv1d/Makefile
+++ b/sverilog_version/tests/conv1d/Makefile
@@ -6,4 +6,8 @@ VERILOG_SOURCES += ../../src/dot_product.sv
 TOPLEVEL = conv1d
 MODULE = conv1d_tb
 
+COMPILE_ARGS += -Pconv1d.IN_D=4
+COMPILE_ARGS += -Pconv1d.OUT_D=8
+COMPILE_ARGS += -Pconv1d.B_VALUES=\"qconv0_weights\"
+
 include $(shell cocotb-config --makefiles)/Makefile.sim
