--- a/sverilog_version/tests/row_by_matrix_multiply/Makefile
+++ b/sverilog_version/tests/row_by_matrix_multiply/Makefile
@@ -5,6 +5,8 @@ VERILOG_SOURCES += ../../src/dot_product.sv
 TOPLEVEL = row_by_matrix_multiply
 MODULE = row_by_matrix_multiply_tb
 
-# COMPILE_ARGS += -Prow_by_matrix_multiply.B_VALUES=test_b_values.hex
+COMPILE_ARGS += -Prow_by_matrix_multiply.IN_D=4
+COMPILE_ARGS += -Prow_by_matrix_multiply.OUT_D=8
+COMPILE_ARGS += -Prow_by_matrix_multiply.B_VALUES=\"test_matrix_4_8\"
 
 include $(shell cocotb-config --makefiles)/Makefile.sim
