no dft value for FILTER_D, but still need to work out way to get it ENVVAR during run_make_network

--- a/sverilog_version/tests/network/Makefile
+++ b/sverilog_version/tests/network/Makefile
@@ -9,4 +9,6 @@ VERILOG_SOURCES += ../../src/activation_cache.sv
 TOPLEVEL = network
 MODULE = network_tb
 
+COMPILE_ARGS += -Pnetwork.FILTER_D=8
+
 include $(shell cocotb-config --makefiles)/Makefile.sim
