rename B_VALUES as WEIGHTS

--- a/sverilog_version/tests/conv1d/Makefile
+++ b/sverilog_version/tests/conv1d/Makefile
@@ -8,6 +8,6 @@ MODULE = conv1d_tb
 
 COMPILE_ARGS += -Pconv1d.IN_D=4
 COMPILE_ARGS += -Pconv1d.OUT_D=8
-COMPILE_ARGS += -Pconv1d.B_VALUES=\"qconv0_weights\"
+COMPILE_ARGS += -Pconv1d.WEIGHTS=\"qconv0_weights\"
 
 include $(shell cocotb-config --makefiles)/Makefile.sim
