--- a/sverilog_version/tests/row_by_matrix_multiply_16_16/Makefile
+++ b/sverilog_version/tests/row_by_matrix_multiply_16_16/Makefile
@@ -7,6 +7,6 @@ MODULE = row_by_matrix_multiply_tb
 
 COMPILE_ARGS += -Prow_by_matrix_multiply.IN_D=16
 COMPILE_ARGS += -Prow_by_matrix_multiply.OUT_D=16
-COMPILE_ARGS += -Prow_by_matrix_multiply.B_VALUES=\"test_matrix_16_16\"
+COMPILE_ARGS += -Prow_by_matrix_multiply.WEIGHTS=\"test_matrix_16_16\"
 
 include $(shell cocotb-config --makefiles)/Makefile.sim
